<resources>
    <string name="app_name">CollabTrack</string>
    <string name="mapa">Mapa</string>
    <string name="chat">Chat</string>
    <string name="monitorado">Monitorado</string>
    <string name="monitorados">Monitorados</string>
    <string name="perfil">Perfil</string>
    <string name="fechar">Fechar</string>
    <string name="filtrar_localizacoes">Filtrar localizações</string>
    <string name="areas_seguras">Áreas seguras</string>
    <string name="area_segura">Área segura</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="acoes">Ações</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="visualizar_no_mapa">Visualizar no mapa</string>
    <string name="nome">Nome</string>
    <string name="raio">Raio</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="cor">Cor</string>
    <string name="cor_da_borda">Cor da borda</string>
    <string name="selecione_uma_cor">Selecione uma cor</string>
    <string name="metros">Metros</string>
    <string name="km">KM</string>
    <string name="celular">Celular</string>
    <string name="email">E-mail</string>
    <string name="confirmar">Confirmar</string>
    <string name="carregando">Carregando</string>
    <string name="aguarde">Aguarde</string>
    <string name="pesquisando_monitor">Pesquisando monitor</string>
    <string name="sincronizando_dados">Sincronizando dados</string>
    <string name="monitor_nao_encontrado">Monitor não encontrado</string>
    <string name="campo_obrigatorio">Campo obrigatório</string>
    <string name="cadastrando_area_segura">Cadastrando área segura</string>
    <string name="editando_area_segura">Editando área segura</string>
    <string name="excluindo_area_segura">Excluíndo área segura</string>
    <string name="voce_esta_sem_conexao">Você está sem conexão com a internet!</string>
    <string name="tente_efetuar_a_autenticacao_novamente">Tente efetuar a autenticação novamente</string>
    <string name="monitorado_ativar_inativar">Monitorado (Ativar / Inativar)</string>
    <string name="cadastro">Cadastro</string>
    <string name="edicao">Edição</string>
    <string name="ativar">Ativar</string>
    <string name="inativar">Inativar</string>
    <string name="ativando_area_segura">Ativando área segura</string>
    <string name="inativando_area_segura">Inativando área segura</string>
    <string name="resincronizar_dados">Resincronizar dados</string>
    <string name="excluir_area_segura">Excluir área segura?</string>
    <string name="nao">Não</string>
    <string name="sim">Sim</string>
    <string name="bateria">Bateria</string>
    <string name="conexao">Conexão</string>
    <string name="desconectado">Desconectado</string>
    <string name="wi_fi">Wi-Fi</string>
    <string name="movel">Móvel</string>
    <string name="localizacao">Localização</string>
    <string name="ligado">Ligado</string>
    <string name="ligada">Ligado</string>
    <string name="desligado">Desligado</string>
    <string name="desligada">Desligada</string>
    <string name="ativo">Ativo</string>
    <string name="inativo">Inativo</string>
    <string name="ativando_monitorado">Ativando monitorado</string>
    <string name="inativando_monitorado">Inativando monitorado</string>
    <string name="iniciar_monitoramento">Iniciar monitoramento</string>
    <string name="finalizar_monitoramento">Finalizar monitoramento</string>
    <string name="iniciando_monitoramento">Iniciando monitoramento</string>
    <string name="finalizando_monitoramento">Finalizando monitoramento</string>
    <string name="limpar_localizacoes">Limpar localizações</string>
    <string name="limpando_localizacoes">Limpando localizações</string>
    <string name="inscrevase">Inscreva-se</string>
    <string name="ja_possui_uma_conta">Já possui uma conta?</string>
    <string name="entrar">Entrar</string>
    <string name="login">Login</string>
    <string name="cadastrese">Cadastre-se</string>
    <string name="preencha_corretamente_o_celular">Preencha corretamente o número de celular</string>
    <string name="cadastro_realizado_com_sucesso">Seu cadastro foi realizado com sucesso ;) \nToken de autenticação:</string>
    <string name="token_autenticacao_mensagem">Utilize este token caso seja necessário entrar com sua conta em outro dispositivo. \nEsta informação ficará salva em seu perfil para consulta.</string>
    <string name="token">Token</string>
    <string name="token_6_caracteres">Token deve conter 6 caracteres</string>
    <string name="seus_dados">Seus dados</string>
    <string name="seu_token">Seu token </string>
    <string name="sua_foto">Sua foto</string>
    <string name="quem_voce_monitora">Quem você monitora</string>
    <string name="sair">Sair</string>
    <string name="cadastrar_monitorado">Cadastrar monitorado</string>
    <string name="monitor_principal">Monitor principal</string>
    <string name="monitor_secundario">Monitor secundário</string>
    <string name="monitores_secundarios">Monitores secundários</string>
    <string name="sem_dados">Sem dados</string>
    <string name="disclaimer_monitor_principal">Você não é o monitor principal deste monitorado, por isso não tem permissão para alterar seus dados além da cor!</string>
    <string name="fora_de_todas_area_seguras">está fora de todas as áreas seguras</string>
    <string name="sem_permissao_camera">Não está habilitado a permissão de acesso a câmera e ao armazenamento externo</string>
    <string name="em_monitoramento">Em monitoramento</string>
    <string name="nao_esta_em_monitoramento">Fora de monitoramento</string>
    <string name="filtrar">Filtrar</string>
    <string name="cancelar">Cancelar</string>
    <string name="periodo">Período</string>
    <string name="pontos">Pontos</string>
    <string name="monitorado_cadastro">Monitorado (cadastro)</string>
    <string name="monitorado_edicao">Monitorado (edição)</string>
    <string name="limpar_mensagens">Limpar Mensagens</string>
    <string name="nenhuma_localizaca_encontrada">Nenhuma localização foi encontrada</string>
    <string name="voce_nao_esta_conectado">Sem conexão com a internet... Por favor cheque sua conexão!</string>
    <string name="voce_nao_esto_no_wifi">Você não está conectado no Wi-Fi</string>
    <string name="excluir_mensagens">Excluir as mensagens?</string>
    <string name="perigo">Perigo</string>
    <string name="sem_conexao_com_internet">Sem conexão com a Internet</string>
    <string name="mensagem">Mensagem</string>
    <string name="aviso">Aviso</string>
    <string name="error_abrir_camera">Não foi possível abrir a câmera, contate o administrador!</string>
</resources>
