<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:layout_centerInParent="true" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerInParent="true">

            <Button
                android:id="@+id/button_cadastrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="@dimen/login_screen_button_width"
                android:background="@drawable/bg_dark_grey"
                android:textColor="@color/white"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/inscrevase" />

            <TextView
                android:layout_marginTop="@dimen/form_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:text="@string/ja_possui_uma_conta" />

            <Button
                android:id="@+id/button_entrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:width="@dimen/login_screen_button_width"
                android:background="@drawable/bg_white_border"
                android:layout_marginTop="@dimen/home_button_margin_top"
                android:foreground="?attr/selectableItemBackground"
                android:textColor="@color/white"
                android:text="@string/entrar" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>