<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.senai.collabtrack.activity.SignUpActivity"
    android:orientation="vertical"
    android:background="@drawable/bg_primary_color_gradient">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout_nome"
                android:layout_marginTop="@dimen/form_control">

                <EditText
                    android:id="@+id/edit_text_nome"
                    android:layout_width="match_parent"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_height="wrap_content"
                    android:maxLength="60"
                    android:hint="@string/nome" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout_celular"
                android:layout_marginTop="@dimen/form_control">

                <EditText
                    android:id="@+id/edit_text_celular"
                    android:layout_width="match_parent"
                    android:inputType="phone"
                    android:textColor="@color/white"
                    android:backgroundTint="@color/white"
                    android:textColorHint="@color/white"
                    android:layout_height="wrap_content"

                    android:hint="@string/celular" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:id="@+id/token_autenticacao_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_white_border"
                android:layout_marginTop="@dimen/form_control"
                android:padding="@dimen/activity_padding"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/cadastro_realizado_com_sucesso" />

                <TextView
                    android:id="@+id/token_autenticacao_text_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/form_control"
                    android:textColor="@color/logoTextColor"
                    android:textAlignment="center"
                    android:textSize="40dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/white"
                    android:textAlignment="center"
                    android:text="@string/token_autenticacao_mensagem" />

            </LinearLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_control">

                <ProgressBar
                    android:id="@+id/progress_bar_button_cadastrar_entrar"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:visibility="gone" />

                <Button
                    android:id="@+id/button_cadastrar_entrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bg_white_border"
                    android:foreground="?attr/selectableItemBackground"
                    android:textColor="@color/white"
                    android:enabled="false"
                    android:text="@string/cadastrese" />

            </RelativeLayout>

        </LinearLayout>

    </ScrollView>

</LinearLayout>
