<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_padding">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/text_input_layout_nome"
                android:layout_marginTop="@dimen/form_control">

                <EditText
                    android:id="@+id/edit_text_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nome"
                    android:maxLength="60" />

            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_control"
                android:text="@string/cor"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/color_picker_control">

                <ImageView
                    android:id="@+id/image_view_cor"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/color_picker_height" />

                <ImageView
                    android:id="@+id/image_view_cor_disabled"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/color_picker_height"
                    android:background="@color/transparent_grey"
                    android:visibility="gone"/>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_control"
                android:text="@string/cor_da_borda"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/color_picker_control">

                <ImageView
                    android:id="@+id/image_view_cor_borda"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/color_picker_height" />

                <ImageView
                    android:id="@+id/image_view_cor_borda_disabled"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/color_picker_height"
                    android:background="@color/transparent_grey"
                    android:visibility="gone" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/text_view_raio"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/form_control"
                    android:text="@string/raio" />

                <TextView
                    android:id="@+id/text_view_raio_valor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignBaseline="@id/text_view_raio" />

            </RelativeLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/seek_bar_raio"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_marginTop="@dimen/seek_bar_form_control"
            android:layout_marginLeft="@dimen/seek_bar_margin"
            android:layout_marginRight="@dimen/seek_bar_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="10"
            android:progress="1" />

        <LinearLayout
            android:id="@+id/linear_layout_areas_seguras_monitorados"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/form_control">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitorado_ativar_inativar"
                android:paddingLeft="@dimen/activity_padding"
                android:paddingRight="@dimen/activity_padding" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_areas_seguras_monitorados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:clipToPadding="false"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/activity_padding"
            android:paddingRight="@dimen/activity_padding"
            android:layout_marginTop="@dimen/form_control">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/form_control">

                <Button
                    android:id="@+id/button_cadastrar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorPrimaryDark"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="@string/cadastrar"/>

                <ProgressBar
                    android:id="@+id/progress_bar_button_cadastrar"
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_centerInParent="true"
                    android:indeterminateTint="@color/black"
                    android:visibility="invisible" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>