<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="br.com.senai.colabtrack.fragment.dialog.FiltrarLocalizacoesDialogFragment">

            <TextView
                android:id="@+id/text_view_monitor_monitorados"
                android:paddingTop="@dimen/activity_padding"
                android:paddingLeft="@dimen/activity_padding"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/monitorados" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view_monitor_monitorados"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:cacheColorHint="@android:color/transparent"
                android:clipToPadding="false"
                android:divider="@null"
                android:dividerHeight="0dp"
                android:listSelector="@android:color/transparent"
                android:scrollbarStyle="outsideOverlay"
                android:scrollbars="vertical"
                android:layout_marginLeft="10dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/activity_padding">

                <com.weiwangcn.betterspinner.library.material.MaterialBetterSpinner
                    android:id="@+id/spinner_periodo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/periodo"
                    android:layout_marginTop="@dimen/form_control"
                    app:met_floatingLabel="normal" />

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/text_view_pontos"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/form_control"
                        android:text="@string/pontos" />

                    <TextView
                        android:id="@+id/text_view_pontos_valor"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignBaseline="@id/text_view_pontos" />

                </RelativeLayout>

            </LinearLayout>

            <SeekBar
                android:id="@+id/seek_bar_pontos"
                style="@style/Widget.AppCompat.SeekBar.Discrete"
                android:layout_marginTop="@dimen/seek_bar_form_control"
                android:layout_marginLeft="@dimen/seek_bar_margin"
                android:layout_marginRight="@dimen/seek_bar_margin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:max="20"
                android:progress="2" />

    </LinearLayout>

</ScrollView>